# talend2dbt

./: .gitignore  CLAUDE.md  GEMINI.md  LICENSE  README.md  pyproject.toml
.claude/commands/: 00-bootstrap.md  01-pre-process.md  02-migrate-v1.md  02-migrate.md  03-post-process.md
.gemini/commands/: 00-bootstrap.toml  01-pre-process.toml  02-migrate.toml  03-post-process.toml
dbt_generator/: __init__.py  generator.py
docs/: slash-commands.md
examples/GSCV_SC_OTI_SEQ26/talend_item_file/: GSCV_OTI_S26_100_ARTHUR_DLY_DC_RCPT_CHILD_2.0.item  GSCV_OTI_S26_150_ARTHUR_DLY_DC_RCPT_CHILD_2.0.item  GSCV_OTI_S26_50_DLY_DC_RCPT_DQ_CHECKS_CHILD_2.0.item  GSCV_OTI_S26_DCRECEIPTS_GRANDMASTER_0.1.item  GSCV_OTI_S26_DCRECEIPTS_MASTER_0.1.item
examples/glma_spa_S19_WK_MO_AGG/dbt_converted_code/: dbt_project.yml
examples/glma_spa_S19_WK_MO_AGG/talend_item_file/: GLMA_S19_WK_MO_AGG_110_GENERATE_CONTEXT_0.1.item  GLMA_S19_WK_MO_AGG_120_WK_PMIX_INFO_LOAD_0.1.item  GLMA_S19_WK_MO_AGG_130_WK_PMIX_LOAD_0.1.item  GLMA_S19_WK_MO_AGG_140_WK_TM_SEG_SLS_INFO_LOAD_0.1.item  GLMA_S19_WK_MO_AGG_150_WK_TM_SEG_SLS_LOAD_0.1.item  GLMA_S19_WK_MO_AGG_160_WK_DYPT_SLS_INFO_LOAD_0.1.item  GLMA_S19_WK_MO_AGG_170_WK_DYPT_SLS_LOAD_0.1.item  GLMA_S19_WK_MO_AGG_180_WK_SLS_INFO_LOAD_0.1.item  GLMA_S19_WK_MO_AGG_190_WK_SLS_LOAD_0.1.item  GLMA_S19_WK_MO_AGG_200_MO_PMIX_LOAD_0.1.item  GLMA_S19_WK_MO_AGG_210_MO_PMIX_INFO_LOAD_0.1.item  GLMA_S19_WK_MO_AGG_220_MO_TM_SEG_SLS_LOAD_0.1.item  GLMA_S19_WK_MO_AGG_230_MO_TM_SEG_SLS_INFO_LOAD_0.1.item  GLMA_S19_WK_MO_AGG_240_MO_DYPT_SLS_LOAD_0.1.item  GLMA_S19_WK_MO_AGG_250_MO_DYPT_SLS_INFO_LOAD_0.1.item  GLMA_S19_WK_MO_AGG_MO_AGG_GrandMaster_1.0.item  GLMA_S19_WK_MO_AGG_MO_AGG_Master_0.1.item
examples/gscv_s34/talend_item_file/: GSCV_S34_100_DCRECEIPTS_PROCESSED_FILES_EXTRACT_ABAC_1.0.item  GSCV_S34_100_DCRECEIPTS_PROCESSED_FILES_EXTRACT_CHILD_0.1.item  GSCV_S34_GRAND_MASTER_0.1.item  GSCV_S34_MASTER_0.1.item
examples/gscv_s69/dbt_converted_code/: dbt_project.yml  source.yml
examples/gscv_s69/talend_item_file/: GSCV_S69_100_OTI_Rule_Registration_ABAC_0.1.item  GSCV_S69_100_OTI_Rule_Registration_CHILD_0.1.item  GSCV_S69_MASTER_0.1.item  GSCV_S69_OTI_Rule_Registration_GrandMaster_1.0.item
standards/: 01_architecture.md  02_naming_conventions.md  03_model_consolidation.md  04_sql_generation.md  05_component_mapping.md  06_context_variables.md  07_file_organization.md  08_materialization.md  09_dependencies.md  10_quality_validation.md  11_error_handling.md  12_performance.md  13_constraints.md  README.md
talend_parser/: talend_parser.py
(+197 files in other folders)
