[project]
name = "talend2dbt"
version = "1.0.0"
description = "Talend to DBT migration tool for BigQuery with LLM-powered SQL generation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Talend2DBT Contributors" }
]

dependencies = [
    "pyyaml>=6.0",
    "tiktoken>=0.5.0",
    "dbt-core>=1.10.0",
    "dbt-bigquery>=1.10.0",
    "sqlfluff>=3.0.0",
    "yamllint>=1.35.0",
    "mdformat>=0.7.17"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
    "mypy>=1.9.0"
]

[project.scripts]
talend-parser = "talend_parser.talend_parser:main"
dbt-generator = "dbt_generator.generator:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# ============================================================================
# TOOL CONFIGURATION
# ============================================================================

[tool.setuptools]
packages = ["talend_parser", "dbt_generator"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.eggs
  | \.egg-info
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=talend_parser",
    "--cov=dbt_generator",
    "--cov-report=term-missing",
    "--cov-report=html"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tiktoken.*"
ignore_missing_imports = true
